<resources>
    <string name="app_name">Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="edit_type">Edit Type</string>
    <string name="toggle_button"></string>
    <string name="on">Ok</string>
    <string name="off">No</string>
    <string name="layout">Layout</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="to">To</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="info">Thanks for choosing our awersome blend tea. How do you want it serving?</string>
    <string name="temp">Temperature:</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
</resources>
