<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:columnCount="2"
    tools:context=".GridActivity">

    <TextView
        android:text="@string/to"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:hint="@string/edit_type" />

    <EditText
        android:hint="@string/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:gravity="top"
        />

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"

        />
    <ImageView
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:src="@drawable/beast"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"

        />

</GridLayout>
